modified census facility consumer